--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "~/*": ["*"]
+      "@/*": ["*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts" , "images.d.ts"]
 }
