--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/native": "^6.1.7",
     "axios": "^1.6.8",
     "expo": "~50.0.5",
     "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.3",
     "expo-haptics": "^12.8.1",
     "expo-linking": "~6.2.2",
     "expo-router": "^3.4.6",
@@ -23,8 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-gesture-handler": "~2.14.1",
+    "react-native-reanimated": "~3.6.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-swiper": "^1.6.0",
